--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="My name is Ayush Khodankar. I'm currently completing my UnderGraduate degree in Information Technology from Nagpur University.."
     />
+    <link rel="apple-touch-icon" href="logo192.png" />
     <link
       href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
       rel="stylesheet"
@@ -19,6 +20,8 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <meta property="twitter:image" content="%PUBLIC_URL%/social-image.png" />
+    <meta property="og:image" content="%PUBLIC_URL%/social-image.png" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
