--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="My name is Ayush Khodankar. I'm currently completing my UnderGraduate degree in Information Technology from Nagpur University.."
+      content="My name is Ayush Khodankar. I'm currently completing my UnderGraduate degree in Information Technology from Nagpur University."
     />
     <link rel="apple-touch-icon" href="logo192.png" />
     <link
