--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1" />
       <!-- <meta name="theme-color" content="#000000" /> -->
       <meta name="description" content="Web site created using create-react-app" />
-      <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+      <link rel="webmanifest" href="%PUBLIC_URL%/manifest.json" />
       <title>Ayush | Portfolio</title>
       <meta name="description" content="Self Developed personal website build with React.js">
   
