--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,9 @@
       <meta name="twitter:description" content="Self Developed personal website build with React.js">
       <meta name="twitter:image"
         content="">
+
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
