--- a/public/index.html
+++ b/public/index.html
@@ -2,36 +2,14 @@
 <html lang="en">
   <head>
       <meta charset="utf-8" />
-      <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+      <link rel="icon" href="favicon.png" />
       <meta name="viewport" content="width=device-width, initial-scale=1" />
       <!-- <meta name="theme-color" content="#000000" /> -->
       <meta name="description" content="Web site created using create-react-app" />
-      <link rel="webmanifest" href="%PUBLIC_URL%/manifest.json" />
-      <title>Ayush | Portfolio</title>
-      <meta name="description" content="Self Developed personal website build with React.js">
-  
-      <!-- Google / Search Engine Tags -->
-      <meta itemprop="name" content="Ayush | Portfolio">
-      <meta itemprop="description" content="Self Developed personal website build with React.js">
-      <meta itemprop="image"
-        content="">
+      <link rel="webmanifest" href="manifest.json" />
+      <title>Portfolio</title>
 
-      <!-- Facebook Meta Tags -->
-      <meta property="og:url" content="">
-      <meta property="og:type" content="website">
-      <meta property="og:title" content="Ayush | Portfolio">
-      <meta property="og:description" content="Self Developed personal website build with React.js">
-      <meta property="og:image"
-        content="">
-    
-      <!-- Twitter Meta Tags -->
-      <meta name="twitter:card" content="summary_large_image">
-      <meta name="twitter:title" content="Ayush | Portfolio">
-      <meta name="twitter:description" content="Self Developed personal website build with React.js">
-      <meta name="twitter:image"
-        content="">
-
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     </head>
   <body>
